Reduced display clutter removing the old lines, leaving only end ball path, using aging flag. Centered balls on end of line. Simplidfied a few internal loops.