@@ -1,16 +1,24 @@
 public class CopyAllVectorsToDisplayBlock {
+    static int maxBufferDepth = 49;
 
-    static void copyAllVectorsToDisplayBlock(Vectors v1, Vectors v2) {
-        for (ArrowVector arrowVector : v1) {
+    static void copyAllVectorsToDisplayBlock(Vectors currentAV, Vectors accumulatedAV) {
+        Boolean clipBuffer = accumulatedAV.size() > maxBufferDepth * currentAV.size();
+        agePreviousVectors(currentAV, accumulatedAV);
+
+        for (ArrowVector arrowVector : currentAV) {
             ArrowVector arrowVector1 = new ArrowVector(arrowVector);
-            arrowVector1.deltas(arrowVector.getdX(), arrowVector.getdY(), arrowVector.getdZ());
-            v2.add(arrowVector1);
-        }
-        if (v2.size() > 50 * v1.size()) {
-            int k = (int) Math.min(v1.size(), v2.size());
-            for (int i = 0; i < k; i++) {
-                v2.remove(0);
+            accumulatedAV.add(arrowVector1);
+            if (clipBuffer) {
+                accumulatedAV.removeFirst();
             }
+        }
+    }
+
+    static void agePreviousVectors(Vectors currentAV, Vectors accumulatedAV) {
+        for (int indexAV = accumulatedAV.size() - 1;
+             indexAV >= Math.max(accumulatedAV.size() - currentAV.size() - 1, 0);
+             indexAV--) {
+            accumulatedAV.get(indexAV).ageSetGTZero();
         }
     }
 }
